removed background_image.js and split the functions into their own .js files. Updated the js path in wolong.html, nioh2.html, and nioh2/equipment_index.html. Added wolong/equipment_index.html.

--- a/nioh2/equipment/equipment_index.html
+++ b/nioh2/equipment/equipment_index.html
@@ -227,10 +227,12 @@
     </header>
 
 
-    <!-- Title Section -->
+    <!-- ========== ========== ==========
+    Title Section
+    ========== ========== ========== -->
     <section class="w-full my-12 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-6">
-            <h1 class="text-yellow-400 text-5xl">Nioh 2 Equipment</h1>
+            <h1 class="text-yellow-400 text-6xl">Equipment</h1>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
         </div>
     </section>
@@ -265,13 +267,8 @@
     Local JavaScript
     ========== -->
     <!-- Navbar JS -->
-    <script src="https://liukang1080.github.io/gamewiki/nioh2/js/navbar.js" type="text/javascript" defer></script>
-    <!-- <script src="./js/navbar.js" type="text/javascript" defer></script> -->
-    <!-- defer ensures that the page gets fully loaded before the JavaScript executes -->
-    
-    <!-- Background JS -->
-    <script src="https://liukang1080.github.io/gamewiki/nioh2/js/background_image.js" type="text/javascript" defer></script>
-    <!-- <script src="./js/background_image.js" type="text/javascript" defer></script> -->
+    <!-- <script src="https://liukang1080.github.io/gamewiki/js/navbar.js" type="text/javascript" defer></script> -->
+    <script src="../../js/navbar.js" type="text/javascript" defer></script>
 
 </body>
 </html>
