--- a/nioh2/nioh2.html
+++ b/nioh2/nioh2.html
@@ -519,13 +519,13 @@
     Local JavaScript
     ========== -->
     <!-- Navbar JS -->
-    <script src="https://liukang1080.github.io/gamewiki/nioh2/js/navbar.js" type="text/javascript" defer></script>
-    <!-- <script src="./js/navbar.js" type="text/javascript" defer></script> -->
+    <!-- <script src="https://liukang1080.github.io/gamewiki/js/navbar.js" type="text/javascript" defer></script> -->
+    <script src="../js/navbar.js" type="text/javascript" defer></script>
     <!-- defer ensures that the page gets fully loaded before the JavaScript executes -->
     
     <!-- Background JS -->
-    <script src="https://liukang1080.github.io/gamewiki/nioh2/js/background_image.js" type="text/javascript" defer></script>
-    <!-- <script src="./js/background_image.js" type="text/javascript" defer></script> -->
+    <!-- <script src="https://liukang1080.github.io/gamewiki/js/nioh2_background_image.js" type="text/javascript" defer></script> -->
+    <script src="../js/nioh2_background_image.js" type="text/javascript" defer></script>
 
 </body>
 </html>
