Added more content to wolong_TODO.txt

--- a/wolong/wolong.html
+++ b/wolong/wolong.html
@@ -215,7 +215,7 @@
                 <a class="w-full text-center py-6 text-slate-300" href="">BASICS</a>
                 <a class="w-full text-center py-6 text-slate-300" href="">COMBAT</a>
                 <a class="w-full text-center py-6 text-slate-300" href="">WORLD</a>
-                <a class="w-full text-center py-6 text-slate-300" href="">EQUIPMENT</a>
+                <a class="w-full text-center py-6 text-slate-300" href="https://liukang1080.github.io/gamewiki/wolong/equipment/equipment_index.html">EQUIPMENT</a>
                 <a class="w-full text-center py-6 text-slate-300" href="">TOOLS & RESOURCES</a>
                 <a class="w-full text-center py-6 text-slate-300" href="">ONLINE</a>
             </nav>
@@ -509,8 +509,8 @@
     <!-- defer ensures that the page gets fully loaded before the JavaScript executes -->
     
     <!-- Background JS -->
-    <!-- <script src="https://liukang1080.github.io/gamewiki/js/wolong_background_image.js" type="text/javascript" defer></script> -->
-    <script src="../js/wolong_background_image.js" type="text/javascript" defer></script>
+    <!-- <script src="https://liukang1080.github.io/gamewiki/wolong/js/wolong_background_image.js" type="text/javascript" defer></script> -->
+    <script src="./js/wolong_background_image.js" type="text/javascript" defer></script>
 
 </body>
 </html>
