--- a/nioh2/nioh2.html
+++ b/nioh2/nioh2.html
@@ -524,8 +524,8 @@
     <!-- defer ensures that the page gets fully loaded before the JavaScript executes -->
     
     <!-- Background JS -->
-    <!-- <script src="https://liukang1080.github.io/gamewiki/js/nioh2_background_image.js" type="text/javascript" defer></script> -->
-    <script src="../js/nioh2_background_image.js" type="text/javascript" defer></script>
+    <!-- <script src="https://liukang1080.github.io/gamewiki/nioh2/js/nioh2_background_image.js" type="text/javascript" defer></script> -->
+    <script src="./js/nioh2_background_image.js" type="text/javascript" defer></script>
 
 </body>
 </html>
