Updated gitignore. Updated wolong, equipment_index, and combat_index .html files. Added more content to martial_arts.txt. Added qilin.html and the respective images.

--- a/wolong/combat/combat_index.html
+++ b/wolong/combat/combat_index.html
@@ -326,8 +326,8 @@
     Local JavaScript
     ========== -->
     <!-- Navbar JS -->
-    <!-- <script src="https://liukang1080.github.io/gamewiki/js/navbar.js" type="text/javascript" defer></script> -->
-    <script src="../../js/navbar.js" type="text/javascript" defer></script>
+    <script src="https://liukang1080.github.io/gamewiki/js/navbar.js" type="text/javascript" defer></script>
+    <!-- <script src="../../js/navbar.js" type="text/javascript" defer></script> -->
 
 </body>
 </html>
@@ -335,10 +335,4 @@
 <!-- TODO -->
 <!--
     - 
--->
-
-
-<!-- Credits -->
-<!--
-    - Website Development - LiuKang1080
 -->
