--- a/wolong/wolong.html
+++ b/wolong/wolong.html
@@ -503,13 +503,13 @@
     Local JavaScript
     ========== -->
     <!-- Navbar JS -->
-    <!-- <script src="https://liukang1080.github.io/gamewiki/js/navbar.js" type="text/javascript" defer></script> -->
-    <script src="../js/navbar.js" type="text/javascript" defer></script>
+    <script src="https://liukang1080.github.io/gamewiki/js/navbar.js" type="text/javascript" defer></script>
+    <!-- <script src="../js/navbar.js" type="text/javascript" defer></script> -->
     <!-- defer ensures that the page gets fully loaded before the JavaScript executes -->
 
     <!-- Background JS -->
-    <!-- <script src="https://liukang1080.github.io/gamewiki/wolong/js/wolong_background_image.js" type="text/javascript" defer></script> -->
-    <script src="./js/wolong_background_image.js" type="text/javascript" defer></script>
+    <script src="https://liukang1080.github.io/gamewiki/wolong/js/wolong_background_image.js" type="text/javascript" defer></script>
+    <!-- <script src="./js/wolong_background_image.js" type="text/javascript" defer></script> -->
 
 </body>
 </html>
