--- a/wolong/equipment/divine_beasts/qilin.html
+++ b/wolong/equipment/divine_beasts/qilin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Equipment</title>
+    <title>Divine Beast Qilin</title>
     <!-- ========== ========== ==========
     Google Fonts (Bellefair)
     ========== ========== ========== -->
@@ -21,20 +21,20 @@
     TailWindCSS Link
     ========== ========== ========== -->
     <!-- <link type="text/css" href="https://liukang1080.github.io/gamewiki/css/output.css" rel="stylesheet"> -->
-    <link type="text/css" href="../../css/output.css" rel="stylesheet">
+    <link type="text/css" href="../../../css/output.css" rel="stylesheet">
 
     <!-- ========== ========== ==========
     Manual CSS Link
     ========== ========== ========== -->
     <!-- <link type="text/css" href="https://liukang1080.github.io/gamewiki/css/manual.css" rel="stylesheet"> -->
-    <link type="text/css" href="../../css/manual.css" rel="stylesheet">
+    <link type="text/css" href="../../../css/manual.css" rel="stylesheet">
 
     <!-- ========== ========== ==========
     TailWind CSS build process:
     npx tailwindcss -i ./css/input.css -o ./css/output.css --watch
     ========== ========== ========== -->
 </head>
-<body class="bg-stone-900 font-bellefair">
+<body class="bg-stone-900 text-2xl font-bellefair">
     <!-- 
     ========== ========== ==========
     Header
@@ -228,103 +228,35 @@
     ========== ========== ========== -->
     <section class="w-full my-12 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-6">
-            <h1 class="text-yellow-400 text-6xl">Equipment</h1>
+            <h1 class="text-yellow-400 text-6xl text-center">Divine Beast Qilin</h1>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
         </div>
     </section>
 
 
     <!-- ========== ========== ==========
-    Card Section
+    Table of Contents
     ========== ========== ========== -->
-    <section class="w-full my-12 flex flex-col items-center">
-        <div class="w-full px-4 flex flex-col items-center gap-4 
-            lg:max-w-section-width lg:grid lg:grid-cols-3 lg:px-0">
 
-            <!-- ==========
-            Card 1 (Weapons)
-            ========== -->
-            <a class="mask w-full p-4 flex flex-col items-center rounded bg-medium-peach text-4xl text-stone-900 hover:bg-light-peach" 
-                href="">
 
-                <!-- weapon logo -->
+    <!-- ========== ========== ==========
+    Description
+    ========== ========== ========== -->
+    <section class="w-full my-12 flex flex-col items-center gap-6">
+        <h2 id="description" class="text-4xl text-yellow-400">Description</h2>
+        <!-- Large image -->
+        <img src="./img/quilin_large.png" alt="">
 
-                <!-- card text -->
-                <h1 class="">Weapons</h1>
-            </a>
+        <!-- Small image -->
+        <img class="mt-6 p-4 border border-light-peach rounded" src="./img/qilin_small.png" alt="">
 
-            <!-- ==========
-            Card 2 (Armor)
-            ========== -->
-            <a class="mask w-full p-4 flex flex-col items-center rounded bg-medium-peach text-4xl text-stone-900 hover:bg-light-peach" 
-                href="">
-
-                <!-- armor logo -->
-
-                <!-- card text -->
-                <h1 class="">Armor</h1>
-            </a>
-
-            <!-- ==========
-            Card 3 (Wizardry Spells)
-            ========== -->
-            <a class="mask w-full p-4 flex flex-col items-center rounded bg-medium-peach text-4xl text-stone-900 hover:bg-light-peach" 
-                href="">
-
-                <!-- weapon logo -->
-
-                <!-- card text -->
-                <h1 class="">Wizardry Spells</h1>
-            </a>
-
-            <!-- ==========
-            Card 4 (Divine Beasts)
-            ========== -->
-            <a class="mask w-full p-4 flex flex-col items-center rounded bg-medium-peach text-4xl text-stone-900 hover:bg-light-peach" 
-                href="">
-
-                <!-- weapon logo -->
-
-                <!-- card text -->
-                <h1 class="">Divine Beasts</h1>
-            </a>
-
-            <!-- ==========
-            Card 5 (Accessories)
-            ========== -->
-            <a class="mask w-full p-4 flex flex-col items-center rounded bg-medium-peach text-4xl text-stone-900 hover:bg-light-peach" 
-                href="">
-
-                <!-- weapon logo -->
-
-                <!-- card text -->
-                <h1 class="">Accessories</h1>
-            </a>
-
-            <!-- ==========
-            Card 6 (Graces & Sets)
-            ========== -->
-            <a class="mask w-full p-4 flex flex-col items-center rounded bg-medium-peach text-4xl text-stone-900 hover:bg-light-peach" 
-                href="">
-
-                <!-- weapon logo -->
-
-                <!-- card text -->
-                <h1 class="">Graces & Sets</h1>
-            </a>
-
-            <!-- ==========
-            Card 7 (Items)
-            ========== -->
-            <a class="mask w-full p-4 flex flex-col items-center rounded bg-medium-peach text-4xl text-stone-900 hover:bg-light-peach" 
-                href="">
-
-                <!-- weapon logo -->
-
-                <!-- card text -->
-                <h1 class="">Items</h1>
-            </a>
-        </div>
+        <p class="w-full lg:w-1/2 px-4 lg:px-0 italic text-slate-300">
+            The Divine Beast Qilin is the king of all creatures with fur. It is said to live for two-thousand years and have an
+            appearance combining elements of a deer, an ox, and a horse. This auspicious creature is thought to appear in times
+            when the ruler is just, and apparently visited Confucius when he was born. From the Zhou period to the Han period, it
+            was as revered as dragons and became associated with the Earth Phase in the Five Phases theory. It also features in
+            the term "Qilin Child", used to refer to an outstandingly talented youth with a bright future.
+        </p>
     </section>
 
 
