Added more content to martial_arts .txt, .html, and .js files. Added the respective images in martial_arts/img/.

--- a/wolong/combat/martial_arts/martial_arts.html
+++ b/wolong/combat/martial_arts/martial_arts.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -240,7 +240,7 @@
     <section class="w-full my-12 flex flex-col items-center">
         <div class="2xl:max-w-section-width w-full px-4 2xl:px-0 flex flex-col items-start">
             <ol class="list-decimal list-inside text-xl text-sky-400">
-                <li><a class="hover:text-sky-600" href="">Straight Sabre Martial Arts</a></li>
+                <li><a class="hover:text-sky-600" href="javascript: straight_sabre()">Straight Sabre Martial Arts</a></li>
                 <li><a class="hover:text-sky-600" href="">Sword Martial Arts</a></li>
                 <li><a class="hover:text-sky-600" href="">Curved Sword Martial Arts</a></li>
                 <li><a class="hover:text-sky-600" href="">Glaive Martial Arts</a></li>
@@ -262,7 +262,7 @@
     <!-- ========== ========== ==========
     Straight Sabre Martial Arts
     ========== ========== ========== -->
-    <section class="w-full my-12 lg:px-0 flex flex-col items-center">
+    <section id="straight_sabre" class="w-full my-12 lg:px-0 flex flex-col items-center">
         <div class="w-full px-4 py-6 flex flex-col items-center gap-6 bg-light-gray rounded
             2xl:max-w-section-width">
 
@@ -306,11 +306,22 @@
                 ========== -->
                 <tr>
                     <td><div class="flex flex-col justify-center">
-                        <span>Star Fall</span>
-                        <img class="object-none" src="./img/star_fall.png" alt="">
+                        <span>Drifting Cloud</span>
+                        <img class="object-none" src="./img/drifting_cloud.png" alt="">
                     </div></td>
-                    <td>280</td>
-                    <td>Leap high and forcefully slash downward.</td>
+                    <td>296</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td><div class="flex flex-col justify-center">
+                        <span>Gouging Star</span>
+                        <img class="object-none" src="./img/gouging_star.png" alt="">
+                    </div></td>
+                    <td>376</td>
+                    <td>
+                        Spin your weapon around in one hand while advancing forward, then attack. While spinning the weapon, you
+                        will block the enemy's attacks as if you were guarding.
+                    </td>
                 </tr>
                 <tr>
                     <td>Star Fall<br>
@@ -336,7 +347,7 @@
             <hr class="w-full h-[2px] bg-stone-600 border-0">
             
             <div class="flex flex-col gap-2 text-slate-300 text-xl">
-                <span>LiuKang1080, LOLSAN</span>
+                <span>LiuKang1080, LOLSAN, Oninomiru</span>
                 <span>Link to the Martial Arts google doc: <a class="text-sky-500 font-bold" 
                     href="https://docs.google.com/spreadsheets/d/1b4IWj0avgNtueRyFFWa_vwOj1JxX93pHqDQEJcJ2Vgw/edit#gid=0" 
                     target="_blank" rel="noopener noreferrer">here</a></span>
