Added more content to martial_arts.html. Updated content in martial_arts .txt.

--- a/wolong/combat/martial_arts/martial_arts.html
+++ b/wolong/combat/martial_arts/martial_arts.html
@@ -39,7 +39,7 @@
     ========== ========== ==========
     Header
     ========== ========== ========== -->
-    <header class="sticky top-0 z-10 h-[95px] mask bg-medium-gray text-white">
+    <header class="h-[95px] mask bg-medium-gray text-white">
         <!-- sticky top-0 z-10 -->
 
         <!-- ========== ========== ==========
@@ -310,7 +310,9 @@
                         <img class="object-none" src="./img/drifting_cloud.png" alt="">
                     </div></td>
                     <td>296</td>
-                    <td>-</td>
+                    <td>
+                        -
+                    </td>
                 </tr>
                 <tr>
                     <td><div class="flex flex-col justify-center">
@@ -324,13 +326,73 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Star Fall<br>
-                        <img class="py-4" src="./img/star_fall.png" alt=""></td>
-                    <td>280</td>
+                    <td><div class="flex flex-col justify-center">
+                        <span>Ill Wind</span>
+                        <img class="object-none" src="./img/ill_wind.png" alt="">
+                    </div></td>
+                    <td>376</td>
                     <td>
-                        Go into a stance by holding down the button, then let the button go to perform an attack. Releasing the 
-                        at the right time will unleash a powerful attack. Go into a stance by holding down the button, then let the button go to perform an attack. Releasing the 
-                        at the right time will unleash a powerful attack.
+                        -
+                    </td>
+                </tr>
+                <tr>
+                    <td><div class="flex flex-col justify-center">
+                        <span>Meteor Shower</span>
+                        <img class="object-none" src="./img/meteor_shower.png" alt="">
+                    </div></td>
+                    <td>504</td>
+                    <td>
+                        Attack with repeated thrusts.
+                    </td>
+                </tr>
+                <tr>
+                    <td><div class="flex flex-col justify-center">
+                        <span>Meteoric Strike</span>
+                        <img class="object-none" src="./img/meteoric_strike.png" alt="">
+                    </div></td>
+                    <td>376</td>
+                    <td>
+                        Perform a quick attack.
+                    </td>
+                </tr>
+                <tr>
+                    <td><div class="flex flex-col justify-center">
+                        <span>Moon Break</span>
+                        <img class="object-none" src="" alt="">
+                    </div></td>
+                    <td>-</td>
+                    <td>
+                        -
+                    </td>
+                </tr>
+                <tr>
+                    <td><div class="flex flex-col justify-center">
+                        <span>Star Fall</span>
+                        <img class="object-none" src="./img/star_fall.png" alt="">
+                    </div></td>
+                    <td>296</td>
+                    <td>
+                        Leap high and forcefully slash downward.
+                    </td>
+                </tr>
+                <tr>
+                    <td><div class="flex flex-col justify-center">
+                        <span>Swift Lightning</span>
+                        <img class="object-none" src="" alt="">
+                    </div></td>
+                    <td>208</td>
+                    <td>
+                        -
+                    </td>
+                </tr>
+                <tr>
+                    <td><div class="flex flex-col justify-center">
+                        <span>Whirlwind Advance</span>
+                        <img class="object-none" src="./img/whirlwind_advance.png" alt="">
+                    </div></td>
+                    <td>376</td>
+                    <td>
+                        -
                     </td>
                 </tr>
             </table>
