Added a new font family in tailwind.config.js. Added the table sorting function in martial_arts.js. Added more content to martial_arts.html. Updated content in martial_arts.txt. Updated the href links to the martial arts page in wolong.html. Added the respective images in martial_arts/img/.

--- a/wolong/wolong.html
+++ b/wolong/wolong.html
@@ -103,7 +103,7 @@
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Combat Basics</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Deflect</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Spirit System</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Martial Arts</a></li>
+                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="https://liukang1080.github.io/gamewiki/wolong/combat/martial_arts/martial_arts.html">Martial Arts</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Morale Rank</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Five Phases / Status Effects</a></li>
                         </ul>
@@ -306,7 +306,7 @@
                     <a class="px-2 w-full  text-xl text-stone-900" href="">Spirit System</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-peach">
-                    <a class="px-2 w-full  text-xl text-stone-900" href="">Martial Arts</a>
+                    <a class="px-2 w-full  text-xl text-stone-900" href="https://liukang1080.github.io/gamewiki/wolong/combat/martial_arts/martial_arts.html">Martial Arts</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-peach">
                     <a class="px-2 w-full  text-xl text-stone-900" href="">Morale Rank</a>
