--- a/wolong/combat/martial_arts/martial_arts.html
+++ b/wolong/combat/martial_arts/martial_arts.html
@@ -11,6 +11,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bellefair&display=swap" rel="stylesheet">
+    <!-- ========== ========== ==========
+    Google Fonts (Tinos)
+    ========== ========== ========== -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tinos&display=swap" rel="stylesheet">
 
     <!-- ========== ========== ==========
     FlowBite CSS
@@ -241,7 +247,7 @@
         <div class="2xl:max-w-section-width w-full px-4 2xl:px-0 flex flex-col items-start">
             <ol class="list-decimal list-inside text-xl text-sky-400">
                 <li><a class="hover:text-sky-600" href="javascript: straight_sabre()">Straight Sabre Martial Arts</a></li>
-                <li><a class="hover:text-sky-600" href="">Sword Martial Arts</a></li>
+                <li><a class="hover:text-sky-600" href="javascript: sword()">Sword Martial Arts</a></li>
                 <li><a class="hover:text-sky-600" href="">Curved Sword Martial Arts</a></li>
                 <li><a class="hover:text-sky-600" href="">Glaive Martial Arts</a></li>
                 <li><a class="hover:text-sky-600" href="">Halberd Martial Arts</a></li>
@@ -267,19 +273,19 @@
             2xl:max-w-section-width">
 
             <!-- ==========
-            section text 
+            section header
             ========== -->
             <h2 class="text-4xl text-blue-500 font-extrabold text-center">Straight Sabre Martial Arts</h2>
 
             <!-- ==========
             Table
             ========== -->
-            <table class="border-collapse border border-solid border-stone-900 text-stone-900 text-xl font-serif">
+            <table id="straight_sabre_table" class="border-collapse border border-solid border-stone-900 text-stone-900 text-xl font-tinos">
                 <!-- ==========
                 Header 
                 ========== -->
                 <tr>
-                    <th>
+                    <th onclick="sort_table(0, this)">
                         <div class="flex items-center gap-2">
                             <span>Martial Art</span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-arrow-down-up" viewBox="0 0 16 16">
@@ -287,7 +293,7 @@
                             </svg>
                         </div>
                     </th>
-                    <th>
+                    <th onclick="sort_table(1, this)">
                         <div class="flex items-center gap-2">
                             <div class="flex flex-col justify-center">
                                 <span>Spirit Cost</span>
@@ -309,9 +315,9 @@
                         <span>Drifting Cloud</span>
                         <img class="object-none" src="./img/drifting_cloud.png" alt="">
                     </div></td>
-                    <td>296</td>
+                    <td>128</td>
                     <td>
-                        -
+                        Swiftly swing your weapon upward and jump back.
                     </td>
                 </tr>
                 <tr>
@@ -332,7 +338,7 @@
                     </div></td>
                     <td>376</td>
                     <td>
-                        -
+                        Jump up, performing a spinning slice. (Usable while airborne.)
                     </td>
                 </tr>
                 <tr>
@@ -378,11 +384,12 @@
                 <tr>
                     <td><div class="flex flex-col justify-center">
                         <span>Swift Lightning</span>
-                        <img class="object-none" src="" alt="">
+                        <img class="object-none" src="./img/swift_lightning.png" alt="">
                     </div></td>
                     <td>208</td>
                     <td>
-                        -
+                        Perform a fierce forward-facing thrust. [Additional Input: Charge Attack] Hold down the Arts button upon
+                        activation to build up energy. Its power increases according to the charge duration.
                     </td>
                 </tr>
                 <tr>
@@ -392,12 +399,151 @@
                     </div></td>
                     <td>376</td>
                     <td>
-                        -
+                        Step forward while rotating the body to perform a frontward slash.
                     </td>
                 </tr>
             </table>
         </div>
     </section>
+
+
+    <!-- ========== ========== ==========
+    Sword Martial Arts
+    ========== ========== ========== -->
+    <section id="sword" class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 bg-light-gray rounded
+            2xl:max-w-section-width">
+
+            <!-- ==========
+            section header
+            ========== -->
+            <h2 class="text-4xl text-blue-500 font-extrabold text-center">Sword Martial Arts</h2>
+
+            <!-- ==========
+            Table
+            ========== -->
+            <table id="sword_table" class="border-collapse border border-solid border-stone-900 text-stone-900 text-xl font-tinos">
+                <!-- ==========
+                Header 
+                ========== -->
+                <tr>
+                    <th onclick="sort_table(0, this)">
+                        <div class="flex items-center gap-2">
+                            <span>Martial Art</span>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-arrow-down-up" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5zm-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5z"/>
+                            </svg>
+                        </div>
+                    </th>
+                    <th onclick="sort_table(1, this)">
+                        <div class="flex items-center gap-2">
+                            <div class="flex flex-col justify-center">
+                                <span>Spirit Cost</span>
+                                <img class="object-none" src="./img/spirit_cost_logo.png" alt="">
+                            </div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-arrow-down-up" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5zm-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5z"/>
+                            </svg>
+                        </div>
+                    </th>
+                    <th>Description</th>
+                </tr>
+
+                <!-- ==========
+                Content
+                ========== -->
+                <tr>
+                    <td><div class="flex flex-col justify-center">
+                        <span>Drifting Cloud</span>
+                        <img class="object-none" src="./img/drifting_cloud.png" alt="">
+                    </div></td>
+                    <td>128</td>
+                    <td>
+                        Swiftly swing your weapon upward and jump back.
+                    </td>
+                </tr>
+                <tr>
+                    <td><div class="flex flex-col justify-center">
+                        <span>Earth Shaper</span>
+                        <img class="object-none" src="./img/earth_shaper.png" alt="">
+                    </div></td>
+                    <td>296</td>
+                    <td>
+                        Bring your weapon down forcefully, causing massive shock-waves in front of you.
+                    </td>
+                </tr>
+                <tr>
+                    <td><div class="flex flex-col justify-center">
+                        <span>Gouging Star</span>
+                        <img class="object-none" src="./img/gouging_star.png" alt="">
+                    </div></td>
+                    <td>376</td>
+                    <td>
+                        Spin your weapon around in one hand while advancing forward, then attack. While spinning the weapon, 
+                        you will block the enemy's attacks as if you were guarding. 
+                    </td>
+                </tr>
+                <tr>
+                    <td><div class="flex flex-col justify-center">
+                        <span>Ill Wind</span>
+                        <img class="object-none" src="./img/ill_wind.png" alt="">
+                    </div></td>
+                    <td>376</td>
+                    <td>
+                        Jump up, performing a spinning slice. (Usable while airborne.)
+                    </td>
+                </tr>
+                <tr>
+                    <td><div class="flex flex-col justify-center">
+                        <span>Swift Lightning</span>
+                        <img class="object-none" src="./img/swift_lightning.png" alt="">
+                    </div></td>
+                    <td>208</td>
+                    <td>
+                        Perform a fierce forward-facing thrust. [Additional Input: Charge Attack] Hold down the Arts button upon
+                        activation to build up energy. Its power increases according to the charge duration.
+                    </td>
+                </tr>
+                <tr>
+                    <td><div class="flex flex-col justify-center">
+                        <span>Meteor Shower</span>
+                        <img class="object-none" src="./img/meteor_shower.png" alt="">
+                    </div></td>
+                    <td>504</td>
+                    <td>
+                        Attack with repeated thrusts.
+                    </td>
+                </tr>
+                <tr>
+                    <td><div class="flex flex-col justify-center">
+                        <span>Meteoric Strike</span>
+                        <img class="object-none" src="./img/meteoric_strike.png" alt="">
+                    </div></td>
+                    <td>376</td>
+                    <td>
+                        Perform a quick attack.
+                    </td>
+                </tr>
+                <tr>
+                    <td><div class="flex flex-col justify-center">
+                        <span>Whirlwind Advance</span>
+                        <img class="object-none" src="./img/whirlwind_advance.png" alt="">
+                    </div></td>
+                    <td>376</td>
+                    <td>
+                        Step forward while rotating the body to perform a frontward slash.
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </section>
+
+
+
+
+
+
+
 
 
     <!-- ========== ========== ==========
