Extended color themes by adding more colors in tailwind.config.js. Added more content to martial_arts .js, and .html files. Updated content in martial_arts.txt. Added the respective images in martial_arts/img/.

--- a/wolong/combat/martial_arts/martial_arts.html
+++ b/wolong/combat/martial_arts/martial_arts.html
@@ -248,17 +248,17 @@
             <ol class="list-decimal list-inside text-xl text-sky-400">
                 <li><a class="hover:text-sky-600" href="javascript: straight_sabre()">Straight Sabre Martial Arts</a></li>
                 <li><a class="hover:text-sky-600" href="javascript: sword()">Sword Martial Arts</a></li>
-                <li><a class="hover:text-sky-600" href="">Curved Sword Martial Arts</a></li>
-                <li><a class="hover:text-sky-600" href="">Glaive Martial Arts</a></li>
-                <li><a class="hover:text-sky-600" href="">Halberd Martial Arts</a></li>
-                <li><a class="hover:text-sky-600" href="">Staff Martial Arts</a></li>
-                <li><a class="hover:text-sky-600" href="">Hammer Martial Arts</a></li>
-                <li><a class="hover:text-sky-600" href="">Poleaxe Martial Arts</a></li>
-                <li><a class="hover:text-sky-600" href="">Spear Martial Arts</a></li>
-                <li><a class="hover:text-sky-600" href="">Slashing Spear Martial Arts</a></li>
-                <li><a class="hover:text-sky-600" href="">Dual Swords Martial Arts</a></li>
-                <li><a class="hover:text-sky-600" href="">Dual Sabres Martial Arts</a></li>
-                <li><a class="hover:text-sky-600" href="">Dual Halberds Martial Arts</a></li>
+                <li><a class="hover:text-sky-600" href="javascript: curved_sabre()">Curved Sabre Martial Arts</a></li>
+                <li><a class="hover:text-sky-600" href="javascript: ">Glaive Martial Arts</a></li>
+                <li><a class="hover:text-sky-600" href="javascript: ">Halberd Martial Arts</a></li>
+                <li><a class="hover:text-sky-600" href="javascript: ">Staff Martial Arts</a></li>
+                <li><a class="hover:text-sky-600" href="javascript: ">Hammer Martial Arts</a></li>
+                <li><a class="hover:text-sky-600" href="javascript: ">Poleaxe Martial Arts</a></li>
+                <li><a class="hover:text-sky-600" href="javascript: ">Spear Martial Arts</a></li>
+                <li><a class="hover:text-sky-600" href="javascript: ">Slashing Spear Martial Arts</a></li>
+                <li><a class="hover:text-sky-600" href="javascript: ">Dual Swords Martial Arts</a></li>
+                <li><a class="hover:text-sky-600" href="javascript: ">Dual Sabres Martial Arts</a></li>
+                <li><a class="hover:text-sky-600" href="javascript: ">Dual Halberds Martial Arts</a></li>
                 <li><a class="hover:text-sky-600" href="javascript: credits()">Credits</a></li>
             </ol>
         </div>
@@ -269,18 +269,19 @@
     Straight Sabre Martial Arts
     ========== ========== ========== -->
     <section id="straight_sabre" class="w-full my-12 lg:px-0 flex flex-col items-center">
-        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 bg-light-gray rounded
-            2xl:max-w-section-width">
+        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded
+            2xl:max-w-section-width lg:px-16">
 
             <!-- ==========
             section header
             ========== -->
-            <h2 class="text-4xl text-blue-500 font-extrabold text-center">Straight Sabre Martial Arts</h2>
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Straight Sabre Martial Arts</h2>
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <!-- ==========
             Table
             ========== -->
-            <table id="straight_sabre_table" class="border-collapse border border-solid border-stone-900 text-stone-900 text-xl font-tinos">
+            <table id="straight_sabre_table" class="bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
                 <!-- ==========
                 Header 
                 ========== -->
@@ -310,7 +311,7 @@
                 <!-- ==========
                 Content
                 ========== -->
-                <tr>
+                <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Drifting Cloud</span>
                         <img class="object-none" src="./img/drifting_cloud.png" alt="">
@@ -320,7 +321,7 @@
                         Swiftly swing your weapon upward and jump back.
                     </td>
                 </tr>
-                <tr>
+                <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Gouging Star</span>
                         <img class="object-none" src="./img/gouging_star.png" alt="">
@@ -331,7 +332,7 @@
                         will block the enemy's attacks as if you were guarding.
                     </td>
                 </tr>
-                <tr>
+                <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Ill Wind</span>
                         <img class="object-none" src="./img/ill_wind.png" alt="">
@@ -341,7 +342,7 @@
                         Jump up, performing a spinning slice. (Usable while airborne.)
                     </td>
                 </tr>
-                <tr>
+                <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Meteor Shower</span>
                         <img class="object-none" src="./img/meteor_shower.png" alt="">
@@ -351,7 +352,7 @@
                         Attack with repeated thrusts.
                     </td>
                 </tr>
-                <tr>
+                <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Meteoric Strike</span>
                         <img class="object-none" src="./img/meteoric_strike.png" alt="">
@@ -361,7 +362,7 @@
                         Perform a quick attack.
                     </td>
                 </tr>
-                <tr>
+                <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Moon Break</span>
                         <img class="object-none" src="" alt="">
@@ -371,7 +372,7 @@
                         -
                     </td>
                 </tr>
-                <tr>
+                <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Star Fall</span>
                         <img class="object-none" src="./img/star_fall.png" alt="">
@@ -381,7 +382,7 @@
                         Leap high and forcefully slash downward.
                     </td>
                 </tr>
-                <tr>
+                <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Swift Lightning</span>
                         <img class="object-none" src="./img/swift_lightning.png" alt="">
@@ -392,7 +393,7 @@
                         activation to build up energy. Its power increases according to the charge duration.
                     </td>
                 </tr>
-                <tr>
+                <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Whirlwind Advance</span>
                         <img class="object-none" src="./img/whirlwind_advance.png" alt="">
@@ -411,18 +412,19 @@
     Sword Martial Arts
     ========== ========== ========== -->
     <section id="sword" class="w-full my-12 lg:px-0 flex flex-col items-center">
-        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 bg-light-gray rounded
-            2xl:max-w-section-width">
+        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded
+            2xl:max-w-section-width lg:px-16">
 
             <!-- ==========
             section header
             ========== -->
-            <h2 class="text-4xl text-blue-500 font-extrabold text-center">Sword Martial Arts</h2>
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Sword Martial Arts</h2>
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <!-- ==========
             Table
             ========== -->
-            <table id="sword_table" class="border-collapse border border-solid border-stone-900 text-stone-900 text-xl font-tinos">
+            <table id="sword_table" class="bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
                 <!-- ==========
                 Header 
                 ========== -->
@@ -452,7 +454,7 @@
                 <!-- ==========
                 Content
                 ========== -->
-                <tr>
+                <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Drifting Cloud</span>
                         <img class="object-none" src="./img/drifting_cloud.png" alt="">
@@ -462,7 +464,7 @@
                         Swiftly swing your weapon upward and jump back.
                     </td>
                 </tr>
-                <tr>
+                <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Earth Shaper</span>
                         <img class="object-none" src="./img/earth_shaper.png" alt="">
@@ -472,7 +474,7 @@
                         Bring your weapon down forcefully, causing massive shock-waves in front of you.
                     </td>
                 </tr>
-                <tr>
+                <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Gouging Star</span>
                         <img class="object-none" src="./img/gouging_star.png" alt="">
@@ -483,7 +485,7 @@
                         you will block the enemy's attacks as if you were guarding. 
                     </td>
                 </tr>
-                <tr>
+                <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Ill Wind</span>
                         <img class="object-none" src="./img/ill_wind.png" alt="">
@@ -493,7 +495,7 @@
                         Jump up, performing a spinning slice. (Usable while airborne.)
                     </td>
                 </tr>
-                <tr>
+                <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Swift Lightning</span>
                         <img class="object-none" src="./img/swift_lightning.png" alt="">
@@ -504,7 +506,7 @@
                         activation to build up energy. Its power increases according to the charge duration.
                     </td>
                 </tr>
-                <tr>
+                <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Meteor Shower</span>
                         <img class="object-none" src="./img/meteor_shower.png" alt="">
@@ -514,7 +516,7 @@
                         Attack with repeated thrusts.
                     </td>
                 </tr>
-                <tr>
+                <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Meteoric Strike</span>
                         <img class="object-none" src="./img/meteoric_strike.png" alt="">
@@ -524,7 +526,7 @@
                         Perform a quick attack.
                     </td>
                 </tr>
-                <tr>
+                <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center">
                         <span>Whirlwind Advance</span>
                         <img class="object-none" src="./img/whirlwind_advance.png" alt="">
@@ -539,10 +541,133 @@
     </section>
 
 
+    <!-- ========== ========== ==========
+    Curved Sabre Martial Arts
+    ========== ========== ========== -->
+    <section id="curved_sabre" class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded
+            2xl:max-w-section-width lg:px-16">
+
+            <!-- ==========
+            section header
+            ========== -->
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Curved Sabre Martial Arts</h2>
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <!-- ==========
+            Table
+            ========== -->
+            <table id="curved_sabre_table" class="bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+                <!-- ==========
+                Header 
+                ========== -->
+                <tr>
+                    <th onclick="sort_table(0, this)">
+                        <div class="flex items-center gap-2">
+                            <span>Martial Art</span>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-arrow-down-up" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5zm-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5z"/>
+                            </svg>
+                        </div>
+                    </th>
+                    <th onclick="sort_table(1, this)">
+                        <div class="flex items-center gap-2">
+                            <div class="flex flex-col justify-center">
+                                <span>Spirit Cost</span>
+                                <img class="object-none" src="./img/spirit_cost_logo.png" alt="">
+                            </div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-arrow-down-up" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5zm-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5z"/>
+                            </svg>
+                        </div>
+                    </th>
+                    <th>Description</th>
+                </tr>
+
+                <!-- ==========
+                Content
+                ========== -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Drifting Cloud</span>
+                        <img class="object-none" src="./img/drifting_cloud.png" alt="">
+                    </div></td>
+                    <td>128</td>
+                    <td>
+                        Swiftly swing your weapon upward and jump back.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Gouging Star</span>
+                        <img class="object-none" src="./img/gouging_star.png" alt="">
+                    </div></td>
+                    <td>376</td>
+                    <td>
+                        Spin your weapon around in one hand while advancing forward, then attack. While spinning the weapon, 
+                        you will block the enemy's attacks as if you were guarding. 
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Increscent Slash</span>
+                        <img class="object-none" src="./img/increscent_slash.png" alt="">
+                    </div></td>
+                    <td>224</td>
+                    <td>
+                        Hold down the Arts button to take a stance, then release it to perform an attack. Release the Arts button
+                        at the right time to unleash a powerful attack.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Looming Cloud</span>
+                        <img class="object-none" src="./img/looming_cloud.png" alt="">
+                    </div></td>
+                    <td>424</td>
+                    <td>
+                        Advance while spinning your weapon in front of you. [Additional Input: Barrage] Increase the number of
+                        rotations by holding down the Martial Arts button.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Meteoric Strike</span>
+                        <img class="object-none" src="./img/meteoric_strike.png" alt="">
+                    </div></td>
+                    <td>376</td>
+                    <td>
+                        Perform a quick attack.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Star Fall</span>
+                        <img class="object-none" src="./img/star_fall.png" alt="">
+                    </div></td>
+                    <td>296</td>
+                    <td>
+                        Leap high and forcefully slash downward.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Whirlwind Advance</span>
+                        <img class="object-none" src="./img/whirlwind_advance.png" alt="">
+                    </div></td>
+                    <td>376</td>
+                    <td>
+                        Step forward while rotating the body to perform a frontward slash.
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </section>
 
 
-
-
+    <!-- ========== ========== ==========
+    Glaive Martial Arts
+    ========== ========== ========== -->
 
 
 
