Added TODO comments in wolong.html.

--- a/wolong/wolong.html
+++ b/wolong/wolong.html
@@ -516,7 +516,8 @@
 
 <!-- TODO -->
 <!--
-    - 
+    - Sort Divs alphabetically:
+        https://stackoverflow.com/questions/31266660/sort-divs-alphabetically-without-destroying-and-recreating-them
 -->
 
 
